--- a/Weather App/GoogleService-Info.plist
+++ b/Weather App/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>User location is needed for getting the weather based on their location.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>User location is needed for getting the weather based on their location.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>User location is needed for getting the weather based on their location.</string>
 	<key>API_KEY</key>
 	<string>AIzaSyD8UtS29R_MyPrVuyrrT7Ts2mwkB0USAN8</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,15 +21,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>weatherapp-fc9b8.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:396968931728:ios:695dc4567159b18ae88315</string>
 </dict>
